# cc-trusted-api

ccnpsdk/rust/cctrusted_ccnp/: Cargo.toml  build.rs
ccnpsdk/rust/cctrusted_ccnp/api/: ccnp-server.proto
ccnpsdk/rust/cctrusted_ccnp/proto/: ccnp-server.proto
ccnpsdk/rust/cctrusted_ccnp/src/: client.rs  lib.rs  sdk.rs
ccnpsdk/rust/sample/: Cargo.toml
ccnpsdk/rust/sample/src/: cc-sample-eventlog.rs  cc-sample-measurement.rs  cc-sample-quote.rs
common/python/cctrusted_base/: tcg.py
common/rust/cctrusted_base/: Cargo.toml  cc_type.rs  cvm.rs  lib.rs  tcg.rs
common/rust/cctrusted_base/src/: api.rs  api_data.rs  binary_blob.rs  cc_type.rs  cvm.rs  eventlog.rs  lib.rs  tcg.rs  tee.rs
common/rust/cctrusted_base/src/tdx/: common.rs  eventlog.rs  mod.rs  quote.rs  report.rs  rtmr.rs  tdvm.rs  tdx.rs
common/rust/cctrusted_base/src/tpm/: quote.rs
common/rust/cctrusted_base/tdx/: common.rs  eventlog.rs  mod.rs  quote.rs  report.rs  rtmr.rs  tdvm.rs  tdx_imr.rs  tdx_vm.rs
vmsdk/rust/cctrusted/: Cargo.toml  mod.rs
vmsdk/rust/cctrusted/src/: api.rs  api_data.rs  cvm.rs  data.rs  lib.rs  mod.rs  sdk.rs  tdvm.rs
vmsdk/rust/cctrusted_vm/src/: cvm.rs  lib.rs  sdk.rs  sdk_test.rs  tdvm.rs
vmsdk/rust/sample/: Cargo.toml
vmsdk/rust/sample/src/: cc-sample-eventlog.rs  cc-sample-measurement.rs  cc-sample-quote.rs  cc-sample.rs
