[package]
name = "cctrusted_ccnp"
version = "0.1.0"
edition = "2021"
authors = ["Chen Hairong <hairong.chen@intel.com>"]
repository = "https://github.com/cc-api/cc-trusted-api"
description = "CC Trusted API CCNP SDK"
license = "Apache-2.0"

[lib]
name = "cctrusted_ccnp"
path = "src/lib.rs"

[dependencies]
cctrusted_base = { path = "../../../common/rust/cctrusted_base" }
anyhow = "1.0"
log = "0.4.20"
tonic = "0.9"

[build-dependencies]
tonic-build = "0.9"